Use a Shishi config file.

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -32,7 +32,7 @@ libutils_la_SOURCES = utils.h utils.c
 TESTS_ENVIRONMENT = \
 	SHISHI_KEYS=$(srcdir)/gssapi.key \
 	SHISHI_TICKETS=$(srcdir)/gssapi.tkt \
-	SHISHI_CONFIG=ignore-this-warning \
+	SHISHI_CONFIG=$(srcdir)/gssapi.cfg \
 	SHISHI_HOME=ignore-this-warning \
 	SHISHI_USER=ignore-this-warning \
 	THREADSAFETY_FILES=`ls $(top_srcdir)/lib/*/*.c | $(GREP) -v -e lib/gl/vasnprintf.c -e lib/gl/getdelim.c` \
