Forward-port 1.4.x changes.

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,5 @@
-*.la
-*.lo
-*.o
 *~
-.deps
-.libs
+gsasl-*.tar.gz
 ABOUT-NLS
 INSTALL
 Makefile
@@ -16,9 +12,15 @@ config.h.in
 config.log
 config.status
 configure
+doc/.deps/
+doc/.libs/
+doc/Makefile
+doc/Makefile.in
 doc/abstraction.pdf
 doc/controlflow.pdf
 doc/controlflow2.pdf
+doc/cyclo/Makefile
+doc/cyclo/Makefile.in
 doc/cyclo/cyclo-gsasl.html
 doc/doxygen/Doxyfile
 doc/gsasl-api-error-labels.texi
@@ -42,102 +44,256 @@ doc/gsasl.tp
 doc/gsasl.vr
 doc/man/
 doc/print-errors
-doc/reference/
+doc/print-errors.o
+doc/reference/Makefile
+doc/reference/Makefile.in
+doc/reference/gsasl-decl-list.txt
+doc/reference/gsasl-decl.txt
+doc/reference/gsasl-overrides.txt
+doc/reference/gsasl-sections.txt
+doc/reference/gsasl-undeclared.txt
+doc/reference/gsasl-undocumented.txt
+doc/reference/gsasl-unused.txt
+doc/reference/gsasl.args
+doc/reference/gsasl.hierarchy
+doc/reference/gsasl.interfaces
+doc/reference/gsasl.prerequisites
+doc/reference/gsasl.signals
+doc/reference/gsasl.types
+doc/reference/html-build.stamp
+doc/reference/html.stamp
+doc/reference/html/
+doc/reference/scan-build.stamp
+doc/reference/sgml-build.stamp
+doc/reference/sgml.stamp
+doc/reference/tmpl-build.stamp
+doc/reference/tmpl.stamp
+doc/reference/tmpl/
+doc/reference/xml/
 doc/stamp-vti
 doc/texi/
 doc/version.texi
+examples/.deps/
+examples/.libs/
+examples/Makefile
+examples/Makefile.in
 examples/client
 examples/client-callback
+examples/client-callback.o
 examples/client-mech
+examples/client-mech.o
 examples/client-serverfirst
+examples/client-serverfirst.o
+examples/client.o
+gl/.deps/
+gl/.libs/
+gl/Makefile
+gl/Makefile.in
 gl/alloca.h
 gl/arg-nonnull.h
 gl/arpa/
+gl/asnprintf.lo
+gl/asnprintf.o
+gl/c-ctype.lo
+gl/c-ctype.o
+gl/c-strcasecmp.lo
+gl/c-strcasecmp.o
+gl/c-strncasecmp.lo
+gl/c-strncasecmp.o
 gl/charset.alias
+gl/close-hook.lo
+gl/close-hook.o
 gl/configmake.h
+gl/exitfail.lo
+gl/exitfail.o
 gl/iconv_open-aix.h
 gl/iconv_open-hpux.h
 gl/iconv_open-irix.h
 gl/iconv_open-osf.h
 gl/iconv_open-solaris.h
+gl/libgl.la
+gl/localcharset.lo
+gl/localcharset.o
+gl/printf-args.lo
+gl/printf-args.o
+gl/printf-parse.lo
+gl/printf-parse.o
+gl/progname.lo
+gl/progname.o
+gl/quote.lo
+gl/quote.o
+gl/quotearg.lo
+gl/quotearg.o
 gl/ref-add.sed
 gl/ref-del.sed
+gl/sockets.lo
+gl/sockets.o
 gl/stdio.h
 gl/stdlib.h
+gl/striconv.lo
+gl/striconv.o
 gl/string.h
 gl/sys/
 gl/unistd.h
+gl/vasnprintf.lo
+gl/vasnprintf.o
+gl/version-etc.lo
+gl/version-etc.o
 gl/warn-on-use.h
 gl/wchar.h
+gl/xalloc-die.lo
+gl/xalloc-die.o
+gl/xmalloc.lo
+gl/xmalloc.o
+gltests/.deps/
+gltests/Makefile
+gltests/Makefile.in
 gltests/arg-nonnull.h
 gltests/fcntl.h
 gltests/libtests.a
+gltests/malloca.o
 gltests/sys/
 gltests/test-alignof
+gltests/test-alignof.o
 gltests/test-alloca-opt
+gltests/test-alloca-opt.o
 gltests/test-arpa_inet
+gltests/test-arpa_inet.o
 gltests/test-binary-io
+gltests/test-binary-io.o
 gltests/test-c-ctype
+gltests/test-c-ctype.o
 gltests/test-c-strcasecmp
+gltests/test-c-strcasecmp.o
 gltests/test-c-strncasecmp
+gltests/test-c-strncasecmp.o
 gltests/test-dup2
+gltests/test-dup2.o
 gltests/test-environ
+gltests/test-environ.o
 gltests/test-errno
+gltests/test-errno.o
 gltests/test-fcntl-h
+gltests/test-fcntl-h.o
 gltests/test-fseeko
+gltests/test-fseeko.o
 gltests/test-getaddrinfo
+gltests/test-getaddrinfo.o
 gltests/test-getdelim
+gltests/test-getdelim.o
 gltests/test-getline
+gltests/test-getline.o
 gltests/test-getopt
+gltests/test-getopt.o
 gltests/test-gettimeofday
+gltests/test-gettimeofday.o
 gltests/test-iconv
+gltests/test-iconv.o
 gltests/test-inet_ntop
+gltests/test-inet_ntop.o
 gltests/test-inet_pton
+gltests/test-inet_pton.o
 gltests/test-lseek
+gltests/test-lseek.o
 gltests/test-lstat
+gltests/test-lstat.o
 gltests/test-malloca
+gltests/test-malloca.o
 gltests/test-mbrtowc
+gltests/test-mbrtowc.o
 gltests/test-mbsinit
+gltests/test-mbsinit.o
 gltests/test-memchr
+gltests/test-memchr.o
 gltests/test-netdb
+gltests/test-netdb.o
 gltests/test-netinet_in
+gltests/test-netinet_in.o
 gltests/test-open
+gltests/test-open.o
 gltests/test-perror
+gltests/test-perror.o
 gltests/test-poll
+gltests/test-poll.o
 gltests/test-quotearg
+gltests/test-quotearg.o
 gltests/test-select
 gltests/test-select-fd
+gltests/test-select-fd.o
 gltests/test-select-stdin
+gltests/test-select-stdin.o
+gltests/test-select.o
 gltests/test-setenv
+gltests/test-setenv.o
 gltests/test-snprintf
+gltests/test-snprintf.o
 gltests/test-sockets
+gltests/test-sockets.o
 gltests/test-stat
+gltests/test-stat.o
 gltests/test-stdbool
+gltests/test-stdbool.o
 gltests/test-stddef
+gltests/test-stddef.o
 gltests/test-stdint
+gltests/test-stdint.o
 gltests/test-stdio
+gltests/test-stdio.o
 gltests/test-stdlib
+gltests/test-stdlib.o
 gltests/test-strerror
+gltests/test-strerror.o
 gltests/test-striconv
+gltests/test-striconv.o
 gltests/test-string
+gltests/test-string.o
 gltests/test-symlink
+gltests/test-symlink.o
 gltests/test-sys_ioctl
+gltests/test-sys_ioctl.o
 gltests/test-sys_select
+gltests/test-sys_select.o
 gltests/test-sys_socket
+gltests/test-sys_socket.o
 gltests/test-sys_stat
+gltests/test-sys_stat.o
 gltests/test-sys_time
+gltests/test-sys_time.o
 gltests/test-time
+gltests/test-time.o
 gltests/test-unistd
+gltests/test-unistd.o
 gltests/test-unsetenv
+gltests/test-unsetenv.o
 gltests/test-vasnprintf
+gltests/test-vasnprintf.o
 gltests/test-version-etc
+gltests/test-version-etc.o
 gltests/test-wchar
+gltests/test-wchar.o
 gltests/test-wctype
+gltests/test-wctype.o
 gltests/test-xalloc-die
+gltests/test-xalloc-die.o
 gltests/time.h
+gltests/version-etc-fsf.o
 gltests/warn-on-use.h
-gsasl-*.tar.gz
+lib/ABOUT-NLS
+lib/INSTALL
+lib/Makefile
+lib/Makefile.in
 lib/aclocal.m4
+lib/anonymous/.deps/
+lib/anonymous/.libs/
+lib/anonymous/Makefile
+lib/anonymous/Makefile.in
+lib/anonymous/client.lo
+lib/anonymous/client.o
+lib/anonymous/libgsasl-anonymous.la
+lib/anonymous/mechinfo.lo
+lib/anonymous/mechinfo.o
+lib/anonymous/server.lo
+lib/anonymous/server.o
 lib/autom4te.cache/
 lib/build-aux/config.guess
 lib/build-aux/config.sub
@@ -152,46 +308,177 @@ lib/config.h.in
 lib/config.log
 lib/config.status
 lib/configure
+lib/cram-md5/.deps/
+lib/cram-md5/.libs/
+lib/cram-md5/Makefile
+lib/cram-md5/Makefile.in
+lib/cram-md5/challenge.lo
+lib/cram-md5/challenge.o
+lib/cram-md5/client.lo
+lib/cram-md5/client.o
+lib/cram-md5/digest.lo
+lib/cram-md5/digest.o
+lib/cram-md5/libgsasl-cram_md5.la
+lib/cram-md5/mechinfo.lo
+lib/cram-md5/mechinfo.o
+lib/cram-md5/server.lo
+lib/cram-md5/server.o
+lib/digest-md5/.deps/
+lib/digest-md5/.libs/
+lib/digest-md5/Makefile
+lib/digest-md5/Makefile.in
+lib/digest-md5/client.lo
+lib/digest-md5/client.o
+lib/digest-md5/digesthmac.lo
+lib/digest-md5/digesthmac.o
+lib/digest-md5/free.lo
+lib/digest-md5/free.o
+lib/digest-md5/getsubopt.lo
+lib/digest-md5/getsubopt.o
+lib/digest-md5/libgsasl-digest_md5.la
+lib/digest-md5/mechinfo.lo
+lib/digest-md5/mechinfo.o
+lib/digest-md5/nonascii.lo
+lib/digest-md5/nonascii.o
+lib/digest-md5/parser.lo
+lib/digest-md5/parser.o
+lib/digest-md5/printer.lo
+lib/digest-md5/printer.o
+lib/digest-md5/qop.lo
+lib/digest-md5/qop.o
+lib/digest-md5/server.lo
+lib/digest-md5/server.o
+lib/digest-md5/session.lo
+lib/digest-md5/session.o
 lib/digest-md5/test-parser
+lib/digest-md5/test-parser.o
+lib/digest-md5/validate.lo
+lib/digest-md5/validate.o
+lib/external/.deps/
+lib/external/.libs/
+lib/external/Makefile
+lib/external/Makefile.in
+lib/external/client.lo
+lib/external/client.o
+lib/external/libgsasl-external.la
+lib/external/mechinfo.lo
+lib/external/mechinfo.o
+lib/external/server.lo
+lib/external/server.o
+lib/gl/.deps/
+lib/gl/.libs/
+lib/gl/Makefile
+lib/gl/Makefile.in
 lib/gl/alloca.h
 lib/gl/arg-nonnull.h
+lib/gl/asnprintf.lo
+lib/gl/asnprintf.o
+lib/gl/base64.lo
+lib/gl/base64.o
+lib/gl/gc-libgcrypt.lo
+lib/gl/gc-libgcrypt.o
+lib/gl/gc-pbkdf2-sha1.lo
+lib/gl/gc-pbkdf2-sha1.o
+lib/gl/libgl.la
+lib/gl/memxor.lo
+lib/gl/memxor.o
+lib/gl/printf-args.lo
+lib/gl/printf-args.o
+lib/gl/printf-parse.lo
+lib/gl/printf-parse.o
 lib/gl/stdio.h
 lib/gl/stdlib.h
 lib/gl/string.h
 lib/gl/unistd.h
+lib/gl/vasnprintf.lo
+lib/gl/vasnprintf.o
 lib/gl/warn-on-use.h
 lib/gl/wchar.h
+lib/gltests/.deps/
+lib/gltests/Makefile
+lib/gltests/Makefile.in
 lib/gltests/arg-nonnull.h
+lib/gltests/dummy.o
 lib/gltests/libtests.a
 lib/gltests/test-alloca-opt
+lib/gltests/test-alloca-opt.o
 lib/gltests/test-base64
+lib/gltests/test-base64.o
 lib/gltests/test-errno
+lib/gltests/test-errno.o
 lib/gltests/test-gc
 lib/gltests/test-gc-hmac-md5
+lib/gltests/test-gc-hmac-md5.o
 lib/gltests/test-gc-hmac-sha1
+lib/gltests/test-gc-hmac-sha1.o
 lib/gltests/test-gc-md5
+lib/gltests/test-gc-md5.o
 lib/gltests/test-gc-pbkdf2-sha1
+lib/gltests/test-gc-pbkdf2-sha1.o
 lib/gltests/test-gc-sha1
+lib/gltests/test-gc-sha1.o
+lib/gltests/test-gc.o
 lib/gltests/test-getdelim
+lib/gltests/test-getdelim.o
 lib/gltests/test-getline
+lib/gltests/test-getline.o
 lib/gltests/test-memchr
+lib/gltests/test-memchr.o
 lib/gltests/test-memmem
-lib/gltests/test-rawmemchr
+lib/gltests/test-memmem.o
 lib/gltests/test-stdbool
+lib/gltests/test-stdbool.o
 lib/gltests/test-stddef
+lib/gltests/test-stddef.o
 lib/gltests/test-stdint
+lib/gltests/test-stdint.o
 lib/gltests/test-stdio
+lib/gltests/test-stdio.o
 lib/gltests/test-stdlib
-lib/gltests/test-strchrnul
+lib/gltests/test-stdlib.o
 lib/gltests/test-string
+lib/gltests/test-string.o
 lib/gltests/test-strverscmp
+lib/gltests/test-strverscmp.o
 lib/gltests/test-unistd
+lib/gltests/test-unistd.o
 lib/gltests/test-vasnprintf
+lib/gltests/test-vasnprintf.o
 lib/gltests/test-vasprintf
+lib/gltests/test-vasprintf.o
 lib/gltests/test-wchar
+lib/gltests/test-wchar.o
 lib/gltests/warn-on-use.h
+lib/gs2/.deps/
+lib/gs2/Makefile
+lib/gs2/Makefile.in
+lib/gssapi/.deps/
+lib/gssapi/.libs/
+lib/gssapi/Makefile
+lib/gssapi/Makefile.in
+lib/gssapi/client.lo
+lib/gssapi/client.o
+lib/gssapi/libgsasl-gssapi.la
+lib/gssapi/mechinfo.lo
+lib/gssapi/mechinfo.o
+lib/gssapi/server.lo
+lib/gssapi/server.o
+lib/kerberos_v5/.deps/
+lib/kerberos_v5/Makefile
+lib/kerberos_v5/Makefile.in
 lib/libgsasl.pc
 lib/libtool
+lib/login/.deps/
+lib/login/.libs/
+lib/login/Makefile
+lib/login/Makefile.in
+lib/login/client.lo
+lib/login/client.o
+lib/login/libgsasl-login.la
+lib/login/mechinfo.lo
+lib/login/mechinfo.o
+lib/login/server.lo
+lib/login/server.o
 lib/m4/codeset.m4
 lib/m4/gettext.m4
 lib/m4/glibc2.m4
@@ -226,9 +513,128 @@ lib/m4/visibility.m4
 lib/m4/wchar_t.m4
 lib/m4/wint_t.m4
 lib/m4/xsize.m4
-lib/po/
+lib/ntlm/.deps/
+lib/ntlm/.libs/
+lib/ntlm/Makefile
+lib/ntlm/Makefile.in
+lib/ntlm/libgsasl-ntlm.la
+lib/ntlm/mechinfo.lo
+lib/ntlm/mechinfo.o
+lib/ntlm/ntlm.lo
+lib/ntlm/ntlm.o
+lib/plain/.deps/
+lib/plain/.libs/
+lib/plain/Makefile
+lib/plain/Makefile.in
+lib/plain/client.lo
+lib/plain/client.o
+lib/plain/libgsasl-plain.la
+lib/plain/mechinfo.lo
+lib/plain/mechinfo.o
+lib/plain/server.lo
+lib/plain/server.o
+lib/po/Makefile
+lib/po/Makefile.in
+lib/po/Makefile.in.in
+lib/po/Makevars.template
+lib/po/POTFILES
+lib/po/Rules-quot
+lib/po/boldquot.sed
+lib/po/*.po
+lib/po/*.gmo
+lib/po/en@boldquot.header
+lib/po/en@boldquot.insert-header
+lib/po/en@quot.header
+lib/po/en@quot.insert-header
+lib/po/insert-header.sin
+lib/po/libgsasl.pot
+lib/po/quot.sed
+lib/po/remove-potcdate.sed
+lib/po/remove-potcdate.sin
+lib/po/stamp-po
+lib/scram/.deps/
+lib/scram/.libs/
+lib/scram/Makefile
+lib/scram/Makefile.in
+lib/scram/client.lo
+lib/scram/client.o
+lib/scram/libgsasl-scram.la
+lib/scram/mechinfo.lo
+lib/scram/mechinfo.o
+lib/scram/parser.lo
+lib/scram/parser.o
+lib/scram/printer.lo
+lib/scram/printer.o
+lib/scram/server.lo
+lib/scram/server.o
+lib/scram/tokens.lo
+lib/scram/tokens.o
+lib/scram/validate.lo
+lib/scram/validate.o
+lib/securid/.deps/
+lib/securid/.libs/
+lib/securid/Makefile
+lib/securid/Makefile.in
+lib/securid/client.lo
+lib/securid/client.o
+lib/securid/libgsasl-securid.la
+lib/securid/mechinfo.lo
+lib/securid/mechinfo.o
+lib/securid/server.lo
+lib/securid/server.o
+lib/src/.deps/
+lib/src/.libs/
+lib/src/Makefile
+lib/src/Makefile.in
+lib/src/base64.lo
+lib/src/base64.o
+lib/src/callback.lo
+lib/src/callback.o
+lib/src/crypto.lo
+lib/src/crypto.o
+lib/src/done.lo
+lib/src/done.o
+lib/src/error.lo
+lib/src/error.o
+lib/src/free.lo
+lib/src/free.o
+lib/src/init.lo
+lib/src/init.o
+lib/src/libgsasl.la
+lib/src/listmech.lo
+lib/src/listmech.o
+lib/src/md5pwd.lo
+lib/src/md5pwd.o
+lib/src/mechname.lo
+lib/src/mechname.o
+lib/src/obsolete.lo
+lib/src/obsolete.o
+lib/src/property.lo
+lib/src/property.o
+lib/src/register.lo
+lib/src/register.o
+lib/src/saslprep.lo
+lib/src/saslprep.o
+lib/src/suggest.lo
+lib/src/suggest.o
+lib/src/supportp.lo
+lib/src/supportp.o
+lib/src/version.lo
+lib/src/version.o
+lib/src/xcode.lo
+lib/src/xcode.o
+lib/src/xfinish.lo
+lib/src/xfinish.o
+lib/src/xstart.lo
+lib/src/xstart.o
+lib/src/xstep.lo
+lib/src/xstep.o
 lib/stamp-h1
+lib/tests/.deps/
+lib/tests/Makefile
+lib/tests/Makefile.in
 lib/tests/test-error
+lib/tests/test-error.o
 libtool
 m4/codeset.m4
 m4/gettext.m4
@@ -264,26 +670,76 @@ m4/visibility.m4
 m4/wchar_t.m4
 m4/wint_t.m4
 m4/xsize.m4
-po/
+po/Makefile
+po/Makefile.in
+po/Makefile.in.in
+po/Makevars.template
+po/POTFILES
+po/Rules-quot
+po/boldquot.sed
+po/*.gmo
+po/*.po
+po/en@boldquot.header
+po/en@boldquot.insert-header
+po/en@quot.header
+po/en@quot.insert-header
+po/gsasl.pot
+po/insert-header.sin
+po/quot.sed
+po/remove-potcdate.sed
+po/remove-potcdate.sin
+po/stamp-po
+src/.deps/
+src/.libs/
+src/Makefile
+src/Makefile.in
+src/callbacks.o
 src/gsasl
+src/gsasl.o
 src/gsasl_cmd.c
 src/gsasl_cmd.h
+src/imap.o
+src/libgsasl_cmd.la
+src/libgsasl_cmd_la-gsasl_cmd.lo
+src/libgsasl_cmd_la-gsasl_cmd.o
+src/smtp.o
 stamp-h1
+tests/.deps/
+tests/.libs/
+tests/Makefile
+tests/Makefile.in
 tests/cram-md5
+tests/cram-md5.o
 tests/crypto
+tests/crypto.o
 tests/digest-md5
+tests/digest-md5.o
 tests/errors
+tests/errors.o
 tests/external
-tests/gs2-krb5
-tests/gssapi
+tests/external.o
+tests/libutils.la
 tests/md5file
+tests/md5file.o
 tests/name
+tests/name.o
 tests/old-base64
+tests/old-base64.o
 tests/old-cram-md5
+tests/old-cram-md5.o
 tests/old-digest-md5
+tests/old-digest-md5.o
 tests/old-md5file
+tests/old-md5file.o
 tests/old-simple
+tests/old-simple.o
 tests/scram
+tests/scram.o
 tests/simple
+tests/simple.o
 tests/suggest
+tests/suggest.o
 tests/symbols
+tests/symbols.o
+tests/utils.lo
+tests/utils.o
