--- a/lib/configure.ac
+++ b/lib/configure.ac
@@ -249,20 +249,23 @@ fi
 AC_SUBST([GSS_CFLAGS])
 AC_SUBST([GSS_LIBS])
 
-if test "$gssapi_impl" = "mit" || \
-    test "$gssapi_impl" = "heimdal" || \
-    test "$gssapi_impl" = "mitheimdal"; then
+# Test for GSS-API library features.
+if test "$gssapi_impl" != "no"; then
   save_CPPFLAGS="$CPPFLAGS"
   save_LIBS="$LIBS"
   CPPFLAGS="$CPPFLAGS $GSS_CFLAGS"
-  LIBS="$LIBS $GSS_LIBS"
+  LIBS="$LIBS $LIBGSS $GSS_LIBS"
   AC_CHECK_FUNCS([gss_encapsulate_token])
   AC_CHECK_FUNCS([gss_decapsulate_token])
   AC_CHECK_FUNCS([gss_inquire_mech_for_saslname])
-  AC_CHECK_HEADERS([gssapi.h gssapi/gssapi.h])
-  if test "$ac_cv_header_gssapi_h$ac_cv_header_gssapi_gssapi_h" = "nono"; then
-    gssapi_impl=no
-    AC_MSG_WARN([Cannot find gssapi.h or gssapi/gssapi.h, disabling GSSAPI])
+  if test "$gssapi_impl" = "mit" || \
+      test "$gssapi_impl" = "heimdal" || \
+      test "$gssapi_impl" = "mitheimdal"; then
+    AC_CHECK_HEADERS([gssapi.h gssapi/gssapi.h])
+    if test "$ac_cv_header_gssapi_h$ac_cv_header_gssapi_gssapi_h" = "nono"; then
+      gssapi_impl=no
+      AC_MSG_WARN([Cannot find gssapi.h or gssapi/gssapi.h, disabling GSSAPI])
+    fi
   fi
   CPPFLAGS="$save_CPPFLAGS"
   LIBS="$save_LIBS"
