--- a/lib/gs2/Makefile.am
+++ b/lib/gs2/Makefile.am
@@ -27,8 +27,7 @@ EXTRA_DIST = README
 
 noinst_LTLIBRARIES = libgsasl-gs2.la
 libgsasl_gs2_la_SOURCES = gs2.h mechinfo.c \
-	gs2helper.h gs2helper.c \
-	gs2asn1.h gs2asn1.c
+	gs2helper.h gs2helper.c
 
 if CLIENT
 libgsasl_gs2_la_SOURCES += client.c
