--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -41,8 +41,11 @@ TESTS_ENVIRONMENT = \
 	$(VALGRIND)
 
 ctests = external cram-md5 digest-md5 md5file name errors suggest	\
-	simple crypto scram symbols gssapi gs2-krb5 readnz
+	simple crypto scram symbols readnz
 
+if GNUGSS
+ctests += gssapi gs2-krb5
+endif
 if OBSOLETE
 ctests += old-simple old-md5file old-cram-md5 old-digest-md5	\
 	old-base64
