--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -38,14 +38,11 @@ TESTS_ENVIRONMENT = \
 	THREADSAFETY_FILES=`ls $(top_srcdir)/lib/*/*.c | $(GREP) -v -e lib/gl/vasnprintf.c -e lib/gl/getdelim.c` \
 	MD5FILE=$(srcdir)/cram-md5.pwd \
 	EGREP="$(EGREP)" \
+	GNUGSS=`if grep 'HAVE_LIBGSS 1' ../lib/config.h > /dev/null; then echo yes; else echo no; fi`
 	$(VALGRIND)
 
 ctests = external cram-md5 digest-md5 md5file name errors suggest	\
-	simple crypto scram symbols readnz
-
-if GNUGSS
-ctests += gssapi gs2-krb5
-endif
+	simple crypto scram symbols readnz gssapi gs2-krb5
 if OBSOLETE
 ctests += old-simple old-md5file old-cram-md5 old-digest-md5	\
 	old-base64
