Update gnulib files.

--- a/gl/Makefile.am
+++ b/gl/Makefile.am
@@ -630,7 +630,7 @@ EXTRA_libgl_la_SOURCES += memchr.c
 
 ## begin gnulib module netdb
 
-BUILT_SOURCES += $(NETDB_H)
+BUILT_SOURCES += netdb.h
 
 # We need the following in order to create <netdb.h> when the system
 # doesn't have one that works with the given compiler.
